<resources>
    <string name="app_name">Cuentas</string>
    <string name="clean_up">Limpiar</string>
    <string name="label">Etiqueta</string>
    <string name="error_msg_get_cuentas">Error obteniendo las cuentas</string>
    <string name="progress_title">Acción en curso</string>
    <string name="progress_description">Se está realizado la petición. ¡Espera!</string>
    <string name="error_msg_insert_cuenta">Error al insertar</string>
    <string name="error_msg_remove_cuenta">Se ha producido un error eliminando el elemento.</string>
    <string name="error_msg_fields_needed">Quedan campos sin rellenar</string>
    <string name="titulo_pos_gen">Casa</string>
    <string name="lb_fecha_act_pos_gen">Saldo a</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="backdrop_title">Posición Global</string>
    <string name="backdrop_subtitle">23/12/2016</string>
    <string name="collapsing_saldo">1253.56</string>
    <string name="collapsing_prox_mov">(1423.56)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_add_cuenta">Añadir cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="saldo">Saldo</string>
    <string name="insert_cuenta">Añadir cuenta</string>
    <string name="title_activity_cuentas">Cuentas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_movimientos">MovimientosActivity</string>
</resources>
